<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <version>0.0.0</version>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <maintainer email="dlu@todo.todo">dlu</maintainer>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <description>The default_package package</description>
  <license>TODO</license>
  <name>minimal_package</name>
</package>
