<?xml version="1.0"?>
<package>
  <name>minimal_package</name>
  <version>0.0.0</version>
  <description>The default_package package</description>
  <maintainer email="dlu@todo.todo">dlu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>donatello</run_depend>
  <run_depend>leonardo</run_depend>
  <run_depend>raphael</run_depend>
  <run_depend>xacro</run_depend>
  <test_depend>michelangelo</test_depend>
</package>
