cmake_minimum_required(VERSION 2.8.3)
project(minimal_package)
find_package(catkin REQUIRED)
catkin_package()
install(FILES c3po.urdf core.launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(FILES r2d2.urdf DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/urdf)
install(FILES test.launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)