<?xml version="1.0"?>
<package>
  <name>minimal_package</name>
  <version>0.0.0</version>
  <description>The default_package package</description>
  <maintainer email="dlu@todo.todo">dlu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>pluginlib_tutorials</build_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>pluginlib_tutorials</run_depend>
  <export>
    <dwb_local_planner plugin="${prefix}/dwb_local_planner_plugins.xml"/>
    <polygon_base plugin="${prefix}/polygon_base_plugins.xml"/>
  </export>
</package>
