<?xml version="1.0"?>
<package>
  <name>simple_msg</name>
  <version>0.0.0</version>
  <description>The simple_msg package</description>

  <maintainer email="dlu@todo.todo">dlu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
