cmake_minimum_required(VERSION 2.8.3)
project(simple_msg_ex)
find_package(catkin REQUIRED COMPONENTS message_generation)
add_message_files(FILES Simple.msg)
generate_messages(DEPENDENCIES geometry_msgs)
catkin_package(CATKIN_DEPENDS message_runtime)
add_executable(node src/node.cpp)
add_dependencies(node ${catkin_EXPORTED_TARGETS} ${simple_msg_ex_EXPORTED_TARGETS})
