<?xml version="1.0"?>
<package format="2">
  <name>minimal_package</name>
  <version>0.0.0</version>
  <description>The default_package package</description>
  <maintainer email="dlu@todo.todo">dlu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>shape_msgs</depend>
</package>
